--- a/package.json
+++ b/package.json
@@ -1,10 +1,34 @@
 {
-  "name": "@thundernetworkrad/template-npm-packages",
-  "version": "0.0.1",
-  "description": "A Public Template for npm",
-  "main": "index.js",
-  "repository": "https://github.com/ThunderNetworkRaD/template-npm-packages",
-  "author": "ThunderNetworkRaD | Killer Boss Original",
-  "license": "Mozilla Public License 2.0",
-  "private": false
+  "name": "cin",
+  "version": "2023.02.03",
+  "description": "Standard input module for JavaScript / TypeScript",
+  "main": "build/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "install": "tsc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ThunderNetworkRaD/std.git"
+  },
+  "keywords": [
+    "std",
+    "standard",
+    "npmjs",
+    "npm",
+    "module",
+    "javascript"
+  ],
+  "author": "Thunder Network RaD | Killer Boss Original",
+  "license": "SEE LICENSE IN LICENSE.txt",
+  "bugs": {
+    "url": "https://github.com/ThunderNetworkRaD/std/issues"
+  },
+  "homepage": "https://github.com/ThunderNetworkRaD/std#readme",
+  "dependencies": {
+    "@thundernetworkrad/readline-sync": "^2023.1.30",
+    "@types/node": "^18.11.18",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.4"
+  }
 }
