--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,7 +4,7 @@ on:
     types: [created]
 jobs:
   Publish-NPM:
-    runs-on: ubuntu-latest
+    runs-on: node1
     steps:
       - name: Checkout
         uses: actions/checkout@v2
