--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-cin",
-  "version": "2023.02.03-2",
+  "version": "2023.02.05",
   "description": "Standard input module for JavaScript / TypeScript",
   "main": "build/index.js",
   "types": "build/index.d.ts",
